--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -26,5 +26,5 @@ jobs:
       run: dotnet build --no-restore
     - name: Create artifact
       uses: actions/upload-artifact@v3.1.2
-      path: D:\
+      path: /home/
       
